# sagittarius_sdk_python

./: CMakeLists.txt  Readme.md  compile_pipeline.md  joystick.py  joystick_forward.py  pysagittarius.cc  sagittarius_example.py  setup.py
pysagittarius/: __init__.py
pysagittarius.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
temp_package/: __init__.py
